tests/invalid/next_non_class/main.py
def run_case() -> None:
    x: int = next(123)

if __name__ == "__main__":
    run_case()
